--- a/index.html
+++ b/index.html
@@ -21,22 +21,24 @@
         <div class="videoContent">
             <h1>Learning Visualized</h1>
             <h3>Seeing the unseen world of code</h3>
-            <a class="navButton" onclick="goToVideos()">Open Your Eyes!</a>
+            <div class="buttonsTop">
+              <button class="btn-6" onclick="goToVideos()"><span class="headSpan">Open Your Eyes!</span></button>
+            </div>
         </div>
     </div>
 
    <div id = "about">
-        <h2>About Learning Visualized</h2>
-        <h3> Using the power of vision to help students learn code...</h3>
+        <!-- <h2>About Learning Visualized</h2>
+        <h3> Using the power of vision to help students learn code...</h3> -->
 
     </div>
 
     <div id = "tutorials">
-      <h2>Tutorials</h2>
+      <!-- <h2>Tutorials</h2> -->
       <div class="buttons">
-        <button class="btn-6"><span>option 1</span></button>
-        <button class="btn-6"><span>option 2</span></button>
-        <button class="btn-6"><span>option 3</span></button>
+        <button class="btn-6"><span>Basic Java</span></button>
+        <button class="btn-6"><span>Data Structures</span></button>
+        <button class="btn-6"><span>Complex Methods</span></button>
       </div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
