--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <link rel="stylesheet" href="format.css">
   <link rel="icon" href="images/LearningVisualizedLogo.png">
 </head>
+<h1 class="ml9">
+  <span class="text-wrapper">
+    <span class="letters">Learning Visualized</span>
+  </span>
+</h1>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 <body>
     <div id = "hero" class="tint">
         <video autoplay muted loop id="heroVideo" >
@@ -30,7 +36,6 @@
    <div id = "about">
         <!-- <h2>About Learning Visualized</h2>
         <h3> Using the power of vision to help students learn code...</h3> -->
-
     </div>
 
     <div id = "tutorials">
