--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="format.css">
   <link rel="icon" href="images/LearningVisualizedLogo.png">
 </head>
-<h1 class="ml9">
-  <span class="text-wrapper">
-    <span class="letters">Learning Visualized</span>
-  </span>
-</h1>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+<div class="preloader">
+  <h1 class="ml9">
+    <span class="text-wrapper">
+      <span class="letters">Learning Visualized</span>
+    </span>
+  </h1>
+</div>
 <body>
     <div id = "hero" class="tint">
         <video autoplay muted loop id="heroVideo" >
@@ -47,6 +47,7 @@
       </div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="scripts.js"></script>
 </body>
 
