--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     </div>
 
    <div id = "about">
+     <div class="accent1">
+
+     </div>
+     <div class="accent2">
+
+     </div>
         <!-- <h2>About Learning Visualized</h2>
         <h3> Using the power of vision to help students learn code...</h3> -->
     </div>
@@ -50,5 +56,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="scripts.js"></script>
 </body>
+<footer>
+
+</footer>
+
+
 
 </html>
