--- a/index.html
+++ b/index.html
@@ -35,15 +35,21 @@
 
    <div id = "about">
      <div class="accent1">
-
+         <h3> Seeing something can be a powerful thing!</h3>  
+        <h3>We are using the power of visualization to help students learn code in ways they never could before. </h3> 
      </div>
      <div class="accent2">
-
+         Test
      </div>
+       <div id = "about3" class="accent2">
+         <img src = "images/NateFaceless.png" alt = "Nate Faceless" width = 100% height = 100%>
+     </div>
+       <div id = "about2">
+               <!-- <h2>About Learning Visualized</h2> -->
+        <h3> Seeing something can be a powerful thing!</h3>  
+        <h3>We are using the power of vision to help students learn code in ways they never could before. </h3> 
+       </div>
 
-
-        <!-- <h2>About Learning Visualized</h2>
-        <h3> Using the power of vision to help students learn code...</h3> -->
     </div>
 
     <div id = "tutorials">
