--- a/index.html
+++ b/index.html
@@ -34,23 +34,16 @@
     </div>
 
    <div id = "about">
-     <div class="accent1">
-         <h3> Seeing something can be a powerful thing!</h3>  
-        <h3>We are using the power of visualization to help students learn code in ways they never could before. </h3> 
+     <!-- <div class="accent1">
+     </div> -->
+     <!-- <div class="accent2">
+     </div> -->
+     <div class="aboutwords">
+       <img class="aboutimg" src = "images/logo.svg">
+       <h3>Seeing something can be a powerful thing!
+         We are using the power of vision to help students learn code in ways they never could before. </h3>
      </div>
-     <div class="accent2">
-         Test
-     </div>
-       <div id = "about3" class="accent2">
-         <img src = "images/NateFaceless.png" alt = "Nate Faceless" width = 100% height = 100%>
-     </div>
-       <div id = "about2">
-               <!-- <h2>About Learning Visualized</h2> -->
-        <h3> Seeing something can be a powerful thing!</h3>  
-        <h3>We are using the power of vision to help students learn code in ways they never could before. </h3> 
-       </div>
-
-    </div>
+   </div>
 
     <div id = "tutorials">
       <!-- <h2>Tutorials</h2> -->
@@ -59,7 +52,7 @@
         <button onclick="displayGrid(1)" class="btn-6"><span>Data Structures</span></button>
         <button onclick="displayGrid(2)" class="btn-6"><span>Complex Methods</span></button>
       </div>
-      <div id = "grid1">  
+      <div id = "grid1">
       <div  class="contentDisplayGrid">
         <svg class="orangeBack display1 standardSquare"
            xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -295,10 +288,10 @@
         </svg>
       </div>
      </div>
-        
+
         <div id = grid2></div>
         <div id = grid3></div>
-        
+
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
