--- a/index.html
+++ b/index.html
@@ -34,20 +34,13 @@
     </div>
 
    <div id = "about">
-     <div class="accent1">
-         <h3> Seeing something can be a powerful thing!</h3>  
-        <h3>We are using the power of visualization to help students learn code in ways they never could before. </h3> 
-     </div>
-     <div class="accent2">
-         Test
-     </div>
-       <div id = "about3" class="accent2">
+       <div id = "about3" class="accent2 trans">
          <img src = "images/NateFaceless.png" alt = "Nate Faceless" width = 100% height = 100%>
      </div>
-       <div id = "about2">
+       <div id = "about2" class="acc1 trans">
                <!-- <h2>About Learning Visualized</h2> -->
-        <h3> Seeing something can be a powerful thing!</h3>  
-        <h3>We are using the power of vision to help students learn code in ways they never could before. </h3> 
+        <h3> Seeing something can be a powerful thing!</h3>
+        <h3>We are using the power of vision to help students learn code in ways they never could before. </h3>
        </div>
 
     </div>
@@ -59,8 +52,8 @@
         <button onclick="displayGrid(1)" class="btn-6"><span>Data Structures</span></button>
         <button onclick="displayGrid(2)" class="btn-6"><span>Complex Methods</span></button>
       </div>
-      <div id = "grid1">  
-      <div  class="contentDisplayGrid">
+      <div id = "grid1">
+      <div  class="contentDisplayGrid trans">
         <svg class="orangeBack display1 standardSquare"
            xmlns:dc="http://purl.org/dc/elements/1.1/"
            xmlns:cc="http://creativecommons.org/ns#"
@@ -295,10 +288,10 @@
         </svg>
       </div>
      </div>
-        
+
         <div id = grid2></div>
         <div id = grid3></div>
-        
+
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
