--- a/index.html
+++ b/index.html
@@ -34,22 +34,19 @@
     </div>
 
    <div id = "about">
-     <div class="accent1">
+     <div id="about4">
          <h3> Seeing something can be a powerful thing!</h3>  
         <h3>We are using the power of visualization to help students learn code in ways they never could before. </h3> 
      </div>
      <div class="accent2">
-         Test
+         accent2
      </div>
-       <div id = "about3" class="accent2">
+       <div id = "about_image" class="accent2">
          <img src = "images/NateFaceless.png" alt = "Nate Faceless" width = 100% height = 100%>
      </div>
-       <div id = "about2">
-               <!-- <h2>About Learning Visualized</h2> -->
-        <h3> Seeing something can be a powerful thing!</h3>  
-        <h3>We are using the power of vision to help students learn code in ways they never could before. </h3> 
-       </div>
-
+     <div class="accent2">
+         accent2
+     </div>
     </div>
 
     <div id = "tutorials">
@@ -305,7 +302,19 @@
   <script src="scripts.js"></script>
 </body>
 <footer>
-
+    <grid-container>
+        <grid-row>
+            <grid-column>
+                <h2> Learning Visualized </h2>
+                <img 
+                    src="images/Tutorial_Images/LVLogoBlack.svg" 
+                    alt="triangle with all three sides equal"
+                    height="87px"
+                    width="100px"/>
+                <p> Designed by: Nathanial Bergan & Aaron Grode </p>
+            </grid-column>
+        </grid-row>
+    </grid-container>
 </footer>
 
 
