Shadows added to Tutorial videos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li></li>
         <li></li>
         <li></li>
+        <li></li>
     </ul>
     <!-- Bubbles End -->
     
@@ -79,7 +80,7 @@
       <div id = "grid1">
       <div  class="contentDisplayGrid trans">
           <div class = "text1 tutorial_Text"> Variables</div>
-          <div class = "text2 tutorial_Text"> Data Structures</div>
+          <div class = "text2 tutorial_Text"> Data Types</div>
           <div class = "text3 tutorial_Text"> Operators</div>
           <div class = "text4 tutorial_Text"> How a Compiler Works</div>
           <div class = "text5 tutorial_Text"> Loops</div>
