Shiny Button / Slim border / Working: Tutorial buttons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 </div>
 <body>
     
+    <div class = "newButton"> New Button </div>
+    
     <!-- Bubbles Start -->
     <ul class = "bubbles">
         <li></li>
