Added note and recuced loading time to 3 seconds

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <!-- <h2>Tutorials</h2> -->
         <div class = "tutorialContent">
             <h2>Tutorial Videos</h2>
+            <h2 style="color: #F7882F">///// NOTE: VIDEOS NOT WORKING YET /////</h2>
         </div> 
       <div class="buttons">
         <button onclick="displayGrid(0)" class="btn-6"><span>Basic Java</span></button>
